minor updates to line chart

--- a/crossword/index.html
+++ b/crossword/index.html
@@ -10,7 +10,9 @@
   <div id="header">
     <p>Rankings for Week 2 of the NYT Mini Competition</p>
   </div>
-  <div id="authorDiv"><p id="author">by <i>Yikai Kuo</i></p></div>
+  <div id="authorDiv">
+    <p id="author">by <i>Yikai Kuo</i></p>
+  </div>
   <span id="selectSpan">
   <select id="week">
       <option value="1">Week 1</option>
