exploring typography with processing page and directory renaming

--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Work - Yikai Kuo</title>
-    <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
+    <meta name="description" content="Yikai Kuo is a molecular biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -44,6 +44,9 @@
         <div id="choiceId" class="row hidden">
             <div id="grailed" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='grailed'">
                 <p id="animText" class="titleText align-middle">grailed scraper</p>
+            </div>
+            <div id="p5Type" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5type'">
+                <p id="typeText" class="titleText align-middle">Type and p5</p>
             </div>
             <div id="p5" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5sketches'">
                 <p id="animText" class="titleText align-middle">p5.js doodles</p>
