--- a/animations.html
+++ b/animations.html
@@ -48,6 +48,12 @@
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/comparePoke.gif" />
                 </div>
+                <!-- <div id="vidDiv">
+                    <video playsinline preload="auto" autoplay muted loop id="closetVideo">
+                        <source src="/Animation-Gifs/pokeMp4.mp4" type="video/mp4">
+                    </video>
+                </div> -->
+
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" />
                 </div>
