updated meta tags

--- a/animations.html
+++ b/animations.html
@@ -13,7 +13,7 @@
     </link>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -48,11 +48,17 @@
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/comparePoke.gif" />
                 </div>
-                <!-- <div id="vidDiv">
+                <div id="vidDiv">
                     <video playsinline preload="auto" autoplay muted loop id="closetVideo">
                         <source src="/Animation-Gifs/pokeMp4.mp4" type="video/mp4">
                     </video>
-                </div> -->
+                </div>
+
+                <div id="vidDiv">
+                    <video playsinline preload="auto" autoplay muted loop id="closetVideo">
+                        <source src="/Animation-Gifs/coneMov.mp4" type="video/mp4">
+                    </video>
+                </div>
 
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" />
@@ -71,7 +77,7 @@
             </div>
             <div class="row anim">
                 <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/noGIF.gif" />
+                    <img src="/Animation-Gifs/noCompilationGif.gif" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/boxy.gif" />
