--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Yikai Kuo (郭毅剴) is a molecular biologist with a passion for gene editing, bioinformatics, and art. Welcome welcome :)"/>
+    <meta name="description" content="Yikai Kuo (郭毅剴) is a molecular biologist with a passion for gene editing, bioinformatics, and art. This is his personal site featuring some of his work."/>
     <title>Yikai Kuo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5/lib/p5.min.js"></script>
