--- a/grailed.html
+++ b/grailed.html
@@ -3,8 +3,8 @@
 <head>
     <title>Grailed Scraper - Yikai Kuo</title>
     <meta charset="utf-8">
-    <meta name="description" content="I built a web scraper for scraping images off of Grailed.com. Download thousands of images
-    at whatever dimensions you want."/>
+    <meta name="description" content="Grailed-Scraper is a web scraper for scraping images off of Grailed.com. Download thousands of images
+    of designer clothing at whatever dimensions you want."/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
     <meta http-equiv="cache-control" content="no-cache" />
