--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Work - Yikai Kuo</title>
-    <meta name="description" content="Yikai Kuo is a molecular biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
+    <meta name="description" content="Yikai Kuo (郭毅剴) is a molecular biologist with a passion for gene editing, bioinformatics and art. This is his personal site featuring some of his work."/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
