--- a/animations.html
+++ b/animations.html
@@ -43,16 +43,19 @@
             <!-- animation gif dump, first animation -->
             <div class="row anim">
                 <div class="col-lg-4 col-md-4 col-xs-12">
+                    <img src="/Animation-Gifs/noCompilationGif.gif" />
+                </div>
+                <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/outlinePoke.gif" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/comparePoke.gif" />
                 </div>
-                <div id="vidDiv">
+                <!-- <div id="vidDiv">
                     <video playsinline preload="auto" autoplay muted loop id="closetVideo">
                         <source src="/Animation-Gifs/pokeMp4.mp4" type="video/mp4">
                     </video>
-                </div>
+                </div> -->
 
                 <div id="vidDiv">
                     <video playsinline preload="auto" autoplay muted loop id="closetVideo">
