--- a/animations.html
+++ b/animations.html
@@ -79,9 +79,9 @@
                 </div>
             </div>
             <div class="row anim">
-                <div class="col-lg-4 col-md-4 col-xs-12">
+                <!-- <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/noCompilationGif.gif" />
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <img src="/Animation-Gifs/boxy.gif" />
                 </div>
