formatting typep5 page

--- a/p5type.html
+++ b/p5type.html
@@ -13,7 +13,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-        <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </link>
         <link type="text/css" href="p5typeCss.css" rel="stylesheet">
@@ -55,17 +55,21 @@
                     <div id="descrp" class="col-xl-8 col-md-8 col-xs-12">
                         <p>
                             <i><q>Design is solving problems, and typography is solving problems by making marks.</q></i>
-                            <cite> - John Kane</cite>
+                            <br>
+                            <cite>- John Kane</cite>
                         </p>
                         <p>
                             <strong>Typography</strong> is an integral part of graphic design. 
                             In an effort to buff my design skills and dive deeper into typography, I began reading
                             <i>A Type Primer</i> by John Kane, who also teaches typography at Northeastern University.
                         </p>
+
                         <p>
-                            Kane emphasizes an understanding of the letterform in several ways. One exercise places the same letter
-                            from different typefaces onto a grid, then observing the differences in symmetry, weight, arcs, etc.
+                            I built <a class="underline" href="https://yikaikuo.com/floatingtype/">FloatingType</a> to make learning typographic syntax fun and interactive, and built
+                            <a class="underline" href="https://yikaikuo.com/form/">TypeForm</a> as a tool for creating 2x2 grids to explore the forms of Baskerville.
                         </p>
+
+                       
                         <div id="gridrow" class="row padtop-3rem">
                             <div class="col-xl-6">
                                 <img class="gridanim" src="/Animation-Gifs/baskANIM.gif" alt="Baskerville grid animation" />
@@ -75,9 +79,14 @@
                             </div>
                         </div>
                         <p class="imgDescrp padbot-2rem">Grid animations of Baskerville and Farnham</p>
+                         <p>
+                            Kane emphasizes an understanding of the letterform in several ways. One exercise places the same letter
+                            from different typefaces onto a grid, then observing the differences in symmetry, weight, arcs, and other 
+                            characteristics.
+                        </p>
                         <p>
-                            To make learning typographic syntax more interesting,  
-                            I built <a class="underline" href="https://yikaikuo.com/Typography/">FloatingType</a> in p5.
+                            Typographic lexicon is expansive, ranging from intuitive terms like "median" to more esoteric terms like "crotch". To make learning typographic syntax more engaging,  
+                            I made <a class="underline" href="https://yikaikuo.com/Typography/">FloatingType</a> in p5.
                             Letters float about the canvas and when shaken, display a term (and a pun, for fun).
                         </p>
                         <div class="vidDiv">
