remove bottom message from p5 page

--- a/p5sketches.html
+++ b/p5sketches.html
@@ -94,14 +94,14 @@
                 <div class="col-xs-hidden col-md-2 col-xl-2"></div>
             </div>
 
-            <!-- ending statement -->
-            <div class="row" id="endRow">
+            
+<!--             <div class="row" id="endRow">
                 <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div class="col-xl-8 col-md-8 col-xs-12">
                     <h3>will update with more things in future!</h3>
                 </div>
                 <div class="col-xs-hidden col-md-2 col-xl-2"></div>
-            </div>
+            </div> -->
         </div>
         <footer id="footer" class="fixed-bottom">
             <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
