proper alt tags

--- a/p5type.html
+++ b/p5type.html
@@ -123,10 +123,10 @@
                         <!-- example grids -->
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-xs-12">
-                                <img src="/Animation-Gifs/mom-grid.png" />
+                                <img src="/Animation-Gifs/mom-grid.png" alt="Example grid 1"/>
                             </div>
                             <div class="col-lg-6 col-md-6 col-xs-12">
-                                <img src="/Animation-Gifs/h-grid.png"/>
+                                <img src="/Animation-Gifs/h-grid.png" alt="Example grid 2"/>
                             </div>
                         </div>
 
