--- a/animations.html
+++ b/animations.html
@@ -56,8 +56,8 @@
                         </video>
                         </div> -->
                     <div id="vidDiv">
-                        <video class="lazy" playsinline preload="auto" autoplay muted loop id="closetVideo">
-                            <source data-src="/Animation-Gifs/coneMov.mp4" type="video/mp4">
+                        <video playsinline preload="auto" autoplay muted loop id="closetVideo">
+                            <source src="/Animation-Gifs/coneMov.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="col-lg-4 col-md-4 col-xs-12">
