reformat animation page, update written sections of other pages

--- a/animations.html
+++ b/animations.html
@@ -26,7 +26,7 @@
         </script>
     </head>
     <body>
-        <div class="container contAll">
+        <div class="container">
             <div id="headDiv" class="row">
                 <div class="col-xs-12 col-xl-12">
                     <a href="https://kwhoakai.github.io/">
@@ -40,7 +40,19 @@
             </div>
             <div id="content" class="hidden">
                 <!-- animation gif dump, first animation -->
-                <div class="row anim">
+                <img data-src="/Animation-Gifs/noCompilationGif.gif" class="lazyload center padtopbot" alt="'No!' character animation"/>
+                <div id="viddiv">
+                    <video class="center padtopbot" playsinline preload="auto" autoplay muted loop id="closetVideo">
+                        <source src="/Animation-Gifs/coneMov.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <img data-src="/Animation-Gifs/outlinePoke.gif" class="lazyload center padtopbot" alt="Outline version of Pokemon Go animation"/>
+                <img data-src="/Animation-Gifs/comparePoke.gif" class="lazyload center padtopbot" alt="Three-way comparison of object catch"/>
+                <img data-src="/Animation-Gifs/boxy.gif" class="lazyload center padtopbot" alt="Box character with smoke"/>
+                <img data-src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" class="lazyload center padtopbot" alt="Smooth fight transformation"/>
+                <img data-src="/Animation-Gifs/ebiJump.gif" class="lazyload center padtopbot" alt="ebi fry jumps"/>
+                <img data-src="/Animation-Gifs/jump.gif" class="lazyload center padtopbot" alt="Jumping animation"/>
+                <!-- <div class="row anim">
                     <div class="col-lg-4 col-md-4 col-xs-12">
                         <img data-src="/Animation-Gifs/noCompilationGif.gif" class="lazyload" alt="'No!' character animation"/>
                     </div>
@@ -50,11 +62,7 @@
                     <div class="col-lg-4 col-md-4 col-xs-12">
                         <img data-src="/Animation-Gifs/comparePoke.gif" class="lazyload" alt="Three-way comparison of object catch"/>
                     </div>
-                    <!-- <div id="vidDiv">
-                        <video playsinline preload="auto" autoplay muted loop id="closetVideo">
-                            <source src="/Animation-Gifs/pokeMp4.mp4" type="video/mp4">
-                        </video>
-                        </div> -->
+                    
                     <div id="vidDiv">
                         <video playsinline preload="auto" autoplay muted loop id="closetVideo">
                             <source src="/Animation-Gifs/coneMov.mp4" type="video/mp4">
@@ -63,8 +71,8 @@
                     <div class="col-lg-4 col-md-4 col-xs-12">
                         <img data-src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" class="lazyload" alt="Smooth fight transformation"/>
                     </div>
-                </div>
-                <div class="row anim">
+                    </div>
+                    <div class="row anim">
                     <div class="col-lg-4 col-md-4 col-xs-12">
                         <img data-src="/Animation-Gifs/jump.gif" class="lazyload" alt="Jumping animation"/>
                     </div>
@@ -74,15 +82,12 @@
                     <div class="col-lg-4 col-md-4 col-xs-12">
                         <img data-src="/Animation-Gifs/squash.gif" class="lazyload" alt="squash animation"/>
                     </div>
-                </div>
-                <div class="row anim">
-                    <!-- <div class="col-lg-4 col-md-4 col-xs-12">
-                        <img src="/Animation-Gifs/noCompilationGif.gif" />
-                        </div> -->
+                    </div>
+                    <div class="row anim">
                     <div class="col-lg-4 col-md-4 col-xs-12">
                         <img data-src="/Animation-Gifs/boxy.gif" class="lazyload" alt="Box character with smoke"/>
                     </div>
-                </div>
+                    </div> -->
             </div>
             <footer id="footer" class="fixed-bottom">
                 <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
