--- a/p5type.html
+++ b/p5type.html
@@ -86,7 +86,7 @@
                         </p>
                         <p>
                             Typographic lexicon is expansive, ranging from intuitive terms like "median" to more esoteric terms like "crotch". To make learning typographic syntax more engaging,  
-                            I made <a class="underline" href="https://yikaikuo.com/Typography/">FloatingType</a> in p5.
+                            I create d<a class="underline" href="https://yikaikuo.com/Typography/">FloatingType</a> in p5.
                             Letters float about the canvas and when shaken, display a term (and a pun, for fun).
                         </p>
                         <div class="vidDiv">
